--- a/packages/2d/src/editor/tree/index.module.scss
+++ b/packages/2d/src/editor/tree/index.module.scss
@@ -2,16 +2,17 @@
   margin-top: -1px;
   padding: 3px 0 4px;
   border-top: 2px solid var(--background-color);
+  width: max-content;
+  min-width: 100%;
 }
 
-.label {
+.entry {
   --depth: 0;
 
   padding: 4px 0 4px calc(var(--depth) * 22px + 24px);
   border-radius: var(--radius);
   user-select: none;
   cursor: pointer;
-  display: flex;
 
   &:hover {
     background-color: var(--surface-color-hover);
@@ -26,6 +27,12 @@
   &.parent {
     padding-left: calc(var(--depth) * 22px);
   }
+}
+
+.label {
+  width: max-content;
+  display: flex;
+  padding-right: 8px;
 
   > svg {
     width: 20px;
