feat(ui): bring back audio offset editing (#1166)

--- a/packages/ui/src/components/timeline/Timeline.module.scss
+++ b/packages/ui/src/components/timeline/Timeline.module.scss
@@ -358,6 +358,19 @@
       }
     }
   }
+
+  &.editable {
+    cursor: move;
+    z-index: 1;
+
+    .audioCanvas {
+      filter: brightness(0.32);
+    }
+
+    &:hover .audioCanvas {
+      filter: brightness(0.36);
+    }
+  }
 }
 
 .audioCanvas {
